--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
   import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
   import { getFirestore } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+  // ✅ Tes modules locaux (ils sont bien à la racine du repo)
   import * as Schema from "./schema.js";
   import * as Modes from "./modes.js";
   import * as Goals from "./goals.js";
@@ -122,7 +124,9 @@
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
   const auth = getAuth(app);
+
   signInAnonymously(auth).catch(console.error);
+
   onAuthStateChanged(auth, async (user) => {
     if (!user) return;
     await initApp({ app, db, auth });
