--- a/index.html
+++ b/index.html
@@ -6,51 +6,87 @@
   <title>Tracker d’habitudes & Pratique délibérée</title>
   <link rel="icon" href="data:," />
   <style>
-    :root { --bg:#0b0f14; --panel:#101823; --muted:#6b7280; --text:#e5e7eb; --accent:#60a5fa; --ok:#22c55e; --warn:#f59e0b; --bad:#ef4444; }
-    * { box-sizing: border-box; }
-    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; color: var(--text); background: linear-gradient(180deg,#0b0f14,#0e1621); min-height:100vh; }
-    header { position: sticky; top:0; z-index:10; background: rgba(16,24,35,0.9); backdrop-filter: blur(8px); border-bottom: 1px solid #1f2937; }
-    .wrap { max-width: 1100px; margin: 0 auto; padding: 12px 16px; }
-    h1 { font-size: 18px; margin: 0; }
-    nav { display: flex; gap: 8px; flex-wrap: wrap; }
-    .row { display: grid; grid-template-columns: 240px 1fr; gap: 16px; }
-    @media (max-width: 900px) { .row { grid-template-columns: 1fr; } }
-    .panel { background: var(--panel); border: 1px solid #1f2937; border-radius: 16px; padding: 14px; }
-    .btn { appearance: none; border: 1px solid #334155; background: #0f172a; color: var(--text); padding: 8px 12px; border-radius: 12px; cursor: pointer; }
-    .btn:hover { border-color: #475569; }
-    .btn.primary { background: #111827; border-color: #3b82f6; color: #e5f0ff; }
-    .btn.ghost { background: transparent; }
-    .btn.small { padding: 6px 8px; font-size: 12px; }
-    .pill { font-size: 11px; border: 1px solid #334155; border-radius: 999px; padding: 2px 8px; color: #cbd5e1; }
-    .accent { color: var(--accent); }
-    .muted { color: var(--muted); }
-    .grid { display: grid; gap: 10px; }
-    .grid.cols-2 { grid-template-columns: repeat(2, minmax(0,1fr)); }
-    .grid.cols-3 { grid-template-columns: repeat(3, minmax(0,1fr)); }
-    .field { display: grid; gap:6px; }
-    label { font-size: 12px; color: #cbd5e1; }
-    input, select, textarea { width: 100%; background: #0b1220; border: 1px solid #1f2937; color: var(--text); border-radius: 10px; padding: 8px 10px; }
-    textarea { min-height: 80px; }
-    details { border: 1px solid #1f2937; border-radius: 12px; padding: 8px 10px; background: #0b1220; }
-    details > summary { cursor: pointer; color:#9ca3af; }
-    .list { display: grid; gap: 8px; }
-    .consigne { border: 1px dashed #223045; border-radius: 12px; padding: 10px; }
-    .consigne .title { font-weight: 600; }
-    .consigne .meta { font-size: 12px; color:#a3a3a3; display:flex; gap:8px; flex-wrap: wrap; }
-    .kpi { display:grid; grid-template-columns: repeat(3,minmax(0,1fr)); gap: 8px; }
-    .card { background: #0b1220; border: 1px solid #1f2937; border-radius: 12px; padding: 12px; }
-    .table { width: 100%; border-collapse: collapse; }
-    .table th, .table td { padding: 8px; border-bottom: 1px solid #1f2937; text-align: left; }
-    .section-title { display:flex; justify-content: space-between; align-items:center; margin: 8px 0; }
-    .hidden { display:none; }
-    .flex { display:flex; gap:8px; align-items:center; flex-wrap: wrap; }
-    .right { margin-left:auto; }
-    .badge { font-size: 11px; padding: 2px 8px; border-radius: 999px; border: 1px solid #334155; }
-    .badge.high { border-color:#60a5fa; }
-    .badge.medium { border-color:#9ca3af; }
-    .badge.low { border-color:#64748b; }
-    footer { color:#94a3b8; font-size:12px; padding:24px 0 50px; text-align:center; }
-    .link { color:#93c5fd; text-decoration: underline; text-underline-offset: 2px; }
+    :root{
+      color-scheme: dark light;
+      --bg:#0b0f14; --panel:#101823; --muted:#94a3b8; --text:#e5e7eb; --accent:#60a5fa;
+      --ok:#22c55e; --warn:#f59e0b; --bad:#ef4444; --border:#1f2937; --soft:#0e1621;
+      --shadow: 0 10px 25px rgba(0,0,0,.25), 0 2px 6px rgba(0,0,0,.2);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      color:var(--text); background:linear-gradient(180deg, var(--bg), var(--soft));
+    }
+    header{
+      position:sticky; top:0; z-index:10;
+      background:rgba(16,24,35,.85); backdrop-filter: blur(8px);
+      border-bottom:1px solid var(--border);
+    }
+    .wrap{max-width:1100px; margin:0 auto; padding:12px 16px}
+    h1{font-size:20px; margin:0; letter-spacing:.3px}
+    nav{display:flex; gap:8px; flex-wrap:wrap}
+    .row{display:grid; grid-template-columns: 280px 1fr; gap:16px}
+    @media (max-width: 920px){ .row{grid-template-columns: 1fr} }
+  
+    .panel{
+      background:var(--panel); border:1px solid var(--border); border-radius:16px; padding:14px;
+      box-shadow: var(--shadow);
+    }
+    .btn{
+      appearance:none; border:1px solid #2b3649; background:#0f172a; color:var(--text);
+      padding:10px 14px; border-radius:12px; cursor:pointer; transition: all .15s ease;
+    }
+    .btn:hover{ transform: translateY(-1px); border-color:#3b4a66 }
+    .btn.primary{ background:#111827; border-color:#3b82f6; color:#e5f0ff }
+    .btn.ghost{ background:transparent }
+    .btn.small{ padding:6px 10px; font-size:12px }
+  
+    .pill{ font-size:11px; border:1px solid #334155; border-radius:999px; padding:3px 9px; color:#cbd5e1 }
+    .accent{ color: var(--accent) }
+    .muted{ color: var(--muted) }
+    .grid{ display:grid; gap:10px }
+    .grid.cols-2{ grid-template-columns: repeat(2, minmax(0,1fr)) }
+    .grid.cols-3{ grid-template-columns: repeat(3, minmax(0,1fr)) }
+    .field{ display:grid; gap:6px }
+    label{ font-size:12px; color:#cbd5e1 }
+    input, select, textarea{
+      width:100%; background:#0b1220; border:1px solid var(--border); color:var(--text);
+      border-radius:10px; padding:10px 12px;
+    }
+    textarea{ min-height: 90px }
+    details{ border:1px solid var(--border); border-radius:12px; padding:10px 12px; background:#0b1220 }
+    details > summary{ cursor:pointer; color:#aab0bb }
+  
+    .list{ display:grid; gap:10px }
+    .consigne{ border:1px dashed #223045; border-radius:12px; padding:10px }
+    .consigne .title{ font-weight:600 }
+    .consigne .meta{ font-size:12px; color:#a3a3a3; display:flex; gap:8px; flex-wrap:wrap }
+  
+    .kpi{ display:grid; grid-template-columns: repeat(3,minmax(0,1fr)); gap:10px }
+    @media (max-width: 700px){ .kpi{ grid-template-columns: 1fr } }
+  
+    .card{ background:#0b1220; border:1px solid var(--border); border-radius:12px; padding:14px }
+    .table{ width:100%; border-collapse: collapse }
+    .table th,.table td{ padding:8px; border-bottom:1px solid var(--border); text-align:left }
+  
+    .section-title{ display:flex; justify-content:space-between; align-items:center; margin:8px 0 }
+    .hidden{ display:none }
+    .flex{ display:flex; gap:8px; align-items:center; flex-wrap:wrap }
+    .right{ margin-left:auto }
+    .badge{ font-size:11px; padding:3px 9px; border-radius:999px; border:1px solid #334155 }
+    .badge.high{ border-color:#60a5fa } .badge.medium{ border-color:#9ca3af } .badge.low{ border-color:#64748b }
+  
+    footer{ color:#94a3b8; font-size:12px; padding:24px 0 60px; text-align:center }
+  
+    /* petit tiroir de logs on-screen si debug */
+    #debug-drawer{
+      position:fixed; right:10px; bottom:10px; width:360px; max-height:45vh; overflow:auto;
+      background:rgba(8,12,18,.9); border:1px solid var(--border); border-radius:12px; padding:10px;
+      box-shadow: var(--shadow); font-size:12px; color:#cbd5e1; display:none;
+    }
+    #debug-drawer.visible{ display:block }
+    #debug-drawer pre{ margin:0; white-space:pre-wrap }
   </style>
 </head>
 <body>
@@ -63,7 +99,7 @@
       <button class="btn small" data-route="#/practice">Pratique Délibérée</button>
       <button class="btn small" data-route="#/goals">Objectifs</button>
       <button class="btn small" data-route="#/history">Historique</button>
-      <button class="btn small" data-route="#/admin">Admin</button>
+      <button class="btn small" data-route="#/admin">Admin</button>
     </nav>
   </div>
 </header>
@@ -98,6 +134,16 @@
 <footer>
   V1 — GitHub Pages + Firebase Firestore (auth anonyme). Design minimal. ©
 </footer>
+
+<div id="debug-drawer"></div><script type="module">
+  import { D } from "./schema.js";
+  const drawer = document.getElementById("debug-drawer");
+  if (D.on && drawer){
+    drawer.classList.add("visible");
+    const o = console.info;
+    console.info = (...args) => { o.apply(console, args); const pre=document.createElement("pre"); pre.textContent=args.map(a=>typeof a==='string'?a:JSON.stringify(a)).join(' '); drawer.appendChild(pre); };
+  }
+</script>
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
