--- a/index.html
+++ b/index.html
@@ -116,15 +116,16 @@
   function boot() {
     const uid = getUidFromHash();
     if (!uid) {
-      const root = document.getElementById("view-root");
-      if (root) root.innerHTML = `<div class="card">Aucun UID dans l’URL.<br>Utilise un lien du type <code>${location.origin}${location.pathname}#/u/TON_UID</code></div>`;
+      // Si pas d'UID -> aller direct en mode admin
+      location.hash = "#/admin";
       return;
     }
     initApp({ app, db, user: { uid } });
   }
 
   window.addEventListener("hashchange", boot);
-  boot();</script>
+  boot();
+</script>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </body>
