--- a/index.html
+++ b/index.html
@@ -37,54 +37,18 @@
       Tracker — <span class="text-sky-400">Habitudes</span> & <span class="text-sky-400">Pratique</span>
     </h1>
     <nav class="flex gap-2 flex-wrap">
-      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/dashboard">Tableau de bord</button>
-      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/daily">Mode Journalier</button>
-      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/practice">Pratique Délibérée</button>
-      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/goals">Objectifs</button>
-      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/history">Historique</button>
-      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/admin">Admin</button>
+      <button class="px-3 py-1 rounded-lg bg-gray-800 border border-gray-600 text-sm hover:bg-gray-700" data-route="#/admin">
+        Admin
+      </button>
     </nav>
   </div>
 </header>
 
 <!-- MAIN -->
-<main class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-[280px,1fr] gap-6 p-4">
-  
-  <!-- SIDEBAR -->
-  <aside class="bg-gray-900 border border-gray-700 rounded-xl p-4 shadow-lg space-y-4">
-    <div class="space-y-2">
-      <button id="btn-new-session" class="w-full px-4 py-2 bg-sky-600 text-white rounded-lg shadow hover:bg-sky-500">
-        + Nouvelle session
-      </button>
-      <button id="btn-add-consigne" class="w-full px-4 py-2 bg-gray-800 border border-gray-600 rounded-lg hover:bg-gray-700">
-        + Ajouter une consigne
-      </button>
-      <button id="btn-add-goal" class="w-full px-4 py-2 bg-gray-800 border border-gray-600 rounded-lg hover:bg-gray-700">
-        + Créer un objectif
-      </button>
-    </div>
-
-    <hr class="border-gray-700">
-
-    <div class="space-y-4">
-      <div>
-        <label class="block text-sm text-gray-400">Votre profil</label>
-        <div id="profile-box" class="p-3 bg-gray-800 border border-gray-700 rounded-lg text-gray-400">
-          Chargement…
-        </div>
-      </div>
-      <div>
-        <label class="block text-sm text-gray-400">Catégories</label>
-        <div id="category-box" class="p-3 bg-gray-800 border border-gray-700 rounded-lg"></div>
-      </div>
-    </div>
-  </aside>
-
-  <!-- CONTENT -->
-  <section id="view" class="bg-gray-900 border border-gray-700 rounded-xl p-4 shadow-lg">
-    <div id="view-root">Chargement…</div>
+<main class="max-w-4xl mx-auto p-4">
+  <section id="view-root" class="bg-gray-900 border border-gray-700 rounded-xl p-4 shadow-lg">
+    Chargement…
   </section>
-
 </main>
 
 <!-- FOOTER -->
@@ -136,7 +100,7 @@
   function boot() {
     const uid = getUidFromHash();
     if (!uid) {
-      location.hash = "#/admin"; // redirection auto
+      location.hash = "#/admin"; // par défaut admin
       return;
     }
     initApp({ app, db, user: { uid } });
